fix: resolve all documentation link issues
- Fix homepage action buttons to use relative paths (./01-introduction/...)
- Fix get started link at bottom of homepage
- Replace broken CLI Tools Academy index with clean CLI Tools page
- Fix all cross-references in AI tools pages to use relative paths
- Remove broken links to non-existent sections
- Remove teaching tone from remaining CLI tools content

All internal links now work correctly with GitHub Pages base path.

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -9,11 +9,11 @@ hero:
     file: ../../assets/hero.svg
   actions:
     - text: Getting Started
-      link: /01-introduction/getting-started/
+      link: ./01-introduction/getting-started/
       icon: right-arrow
       variant: primary
     - text: CLI Tools
-      link: /03-cli-tools/modern-replacements/
+      link: ./03-cli-tools/modern-replacements/
       icon: external
 ---
 
@@ -61,4 +61,4 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 - **Testing**: Comprehensive test suites for configurations and scripts
 - **Documentation**: Maintained with Starlight and GitHub Pages
 
-[Get started →](/01-introduction/getting-started/)
+[Get started →](./01-introduction/getting-started/)
