docs: trigger rebuild with timeout fix for link validation

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -65,3 +65,4 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 - **Documentation**: Maintained with Starlight and GitHub Pages
 
 [Get started →](./01-introduction/getting-started/)
+<!-- Trigger docs rebuild -->
