fix: update CLI Tools button to point to overview page instead of modern replacements
- Button 2 now points to CLI tools index with learning paths
- Button 3 points to comprehensive CLI reference
- This provides better navigation hierarchy

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -13,7 +13,7 @@ hero:
       icon: right-arrow
       variant: primary
     - text: CLI Tools
-      link: ./03-cli-tools/modern-replacements/
+      link: ./03-cli-tools/
       icon: external
     - text: CLI Reference
       link: ./reference/cli-utilities/
